--- a/ulcd.service
+++ b/ulcd.service
@@ -6,6 +6,7 @@ Type=simple
 User=root
 Group=ulcd
 Restart=always
+UMask=007
 RuntimeDirectory=ulcd
 EnvironmentFile=/etc/ulcd/env
 ExecStart=/usr/bin/ulcd
